--- a/azure-pipelines/templates/stages/build.yml
+++ b/azure-pipelines/templates/stages/build.yml
@@ -79,27 +79,17 @@ stages:
                   $scriptFolderPath = "./scripts/$scriptFolderForPlatform"
                   Copy-Item -Path "$scriptFolderPath/*" -Destination $rawPath/                  
                   
-                  if ("$(vmImage)" -eq "windows-latest") {
-                      Compress-Archive -Path $rawPath/* -DestinationPath $zipPath -Force
-                      $fileToHash = $zipPath
-                  } else {
-                      tar -czf $tarGzPath -C $rawPath .
-                      $fileToHash = $tarGzPath
-                  }
+                  Compress-Archive -Path $rawPath/* -DestinationPath $zipPath -Force
+                  $fileToHash = $zipPath
                   
                   if (Test-Path $fileToHash) {
                       if ((Get-Item $fileToHash).Length -gt 0) {
-                          $hashString = if ("$(vmImage)" -eq "windows-latest") {
-                              (Get-FileHash $fileToHash -Algorithm SHA256).Hash
-                          } else {
-                              $hashCommand = if ("$(vmImage)" -match "macos-") { "shasum -a 256" } else { "sha256sum" }
-                              (bash -c "$hashCommand $fileToHash").Split(' ')[0]
-                          }
-
+                          $hashString = (Get-FileHash $fileToHash -Algorithm SHA256).Hash
+                  
                           if (![string]::IsNullOrWhiteSpace($hashString)) {
                               $hashbytes = $hashString -split '([A-F0-9]{2})' | Where-Object { $_ } | ForEach-Object { [System.Convert]::ToByte($_, 16) }
                               $hashbase64 = [System.Convert]::ToBase64String($hashbytes)
-                              $hashFilePath = "$packagePath/fiskaltrust.Launcher-$version.$(if ("$(vmImage)" -eq "windows-latest") { "zip" } else { "tar.gz" }).hash"
+                              $hashFilePath = "$packagePath/fiskaltrust.Launcher-$version.zip.hash"
                               Set-Content -Path $hashFilePath -Value $hashbase64
                           } else {
                               Write-Error "Failed to compute hash."
