--- a/azure-pipelines/templates/stages/build.yml
+++ b/azure-pipelines/templates/stages/build.yml
@@ -85,16 +85,11 @@ stages:
                   $version = (Select-Xml -Path ./Directory.Build.props -XPath 'Project/PropertyGroup/Version').Node.InnerText
                   $scriptZipPath = "$(Build.ArtifactStagingDirectory)/scripts-$(target)/$version.zip"
                   $scriptFolderPath = "./scripts/${{ parameters.scriptFolder }}"
-                  $tempScriptPath = "$(Build.ArtifactStagingDirectory)/temp-scripts"
                   $extension = if("${{ parameters.scriptFolder }}" -eq "windows") { "*.cmd" } else { "*.sh" }
 
-                  New-Item -ItemType Directory -Path $tempScriptPath -Force
-                  Get-ChildItem -Path $scriptFolderPath -Filter $extension -File | Copy-Item -Destination $tempScriptPath
-
                   New-Item -ItemType Directory -Path "$(Build.ArtifactStagingDirectory)/scripts-$(target)" -Force
-                  Compress-Archive -Path "$tempScriptPath/*" -DestinationPath $scriptZipPath -Force
-
-                displayName: "Package Scripts for ${{ parameters.scriptFolder }}"          
+                  Get-ChildItem -Path $scriptFolderPath -Filter $extension -File | Compress-Archive -DestinationPath $scriptZipPath -Force
+                displayName: "Package Scripts for ${{ parameters.scriptFolder }}"       
           
           - publish: $(Build.ArtifactStagingDirectory)/package-$(target)
             artifact: package-$(target)
