--- a/azure-pipelines/templates/stages/build.yml
+++ b/azure-pipelines/templates/stages/build.yml
@@ -60,7 +60,9 @@ stages:
           ./src/**/*fiskaltrust*.exe
           ./src/**/*fiskaltrust*.dll
           ./src/**/fiskaltrust.Launcher.dll
+          ./src/**/fiskaltrust.Launcher
           ./src/**/fiskaltrust.Launcher.exe
+          ./src/**/fiskaltrust.LauncherUpdater
           ./src/**/fiskaltrust.LauncherUpdater.exe
           
     - publish: $(Build.ArtifactStagingDirectory)/drop-$(target)
