--- a/azure-pipelines/templates/stages/build.yml
+++ b/azure-pipelines/templates/stages/build.yml
@@ -34,7 +34,7 @@ stages:
             osx-x64:
               vmImage: macos-11
               target: osx-x64
-              scriptFolder: 'osx'
+              scriptFolder: 'linux'
         pool:
           vmImage: $(vmImage)
         steps:
@@ -83,13 +83,16 @@ stages:
           - ${{ each project in parameters.projects }}:
               - pwsh: |
                   $version = (Select-Xml -Path ./Directory.Build.props -XPath 'Project/PropertyGroup/Version').Node.InnerText
-                  $scriptZipPath = "$(Build.ArtifactStagingDirectory)/scripts-$(target)/$version.zip"
-                  $scriptFolderPath = "./scripts/${{ parameters.scriptFolder }}"
-                  $extension = if("${{ parameters.scriptFolder }}" -eq "windows") { "*.cmd" } else { "*.sh" }
+                  $target = '${{ target }}' # np. linux-x64, win-x64
+                  $scriptFolder = '${{ parameters.scriptFolder }}'
+                  $scriptZipPath = "$(Build.ArtifactStagingDirectory)/scripts-$target/$version.zip"
+                  $scriptFolderPath = "./scripts/$scriptFolder"
 
-                  New-Item -ItemType Directory -Path "$(Build.ArtifactStagingDirectory)/scripts-$(target)" -Force
+                  $extension = if($scriptFolder -eq "windows") { "*.cmd" } else { "*.sh" }
+
+                  New-Item -ItemType Directory -Path "$(Build.ArtifactStagingDirectory)/scripts-$target" -Force
                   Get-ChildItem -Path $scriptFolderPath -Filter $extension -File | Compress-Archive -DestinationPath $scriptZipPath -Force
-                displayName: "Package Scripts for ${{ parameters.scriptFolder }}"       
+                displayName: "Package Scripts for $scriptFolder"         
           
           - publish: $(Build.ArtifactStagingDirectory)/package-$(target)
             artifact: package-$(target)
