--- a/azure-pipelines/templates/stages/build.yml
+++ b/azure-pipelines/templates/stages/build.yml
@@ -83,16 +83,15 @@ stages:
           - ${{ each project in parameters.projects }}:
               - pwsh: |
                   $version = (Select-Xml -Path ./Directory.Build.props -XPath 'Project/PropertyGroup/Version').Node.InnerText
-                  $target = '${{ target }}' # np. linux-x64, win-x64
-                  $scriptFolder = '${{ parameters.scriptFolder }}'
-                  $scriptZipPath = "$(Build.ArtifactStagingDirectory)/scripts-$target/$version.zip"
+                  $scriptFolder = "${{ parameters.scriptFolder }}"
+                  $scriptZipPath = "$(Build.ArtifactStagingDirectory)/scripts-${{ target }}/$version.zip"
                   $scriptFolderPath = "./scripts/$scriptFolder"
 
                   $extension = if($scriptFolder -eq "windows") { "*.cmd" } else { "*.sh" }
 
-                  New-Item -ItemType Directory -Path "$(Build.ArtifactStagingDirectory)/scripts-$target" -Force
+                  New-Item -ItemType Directory -Path "$(Build.ArtifactStagingDirectory)/scripts-${{ target }}" -Force
                   Get-ChildItem -Path $scriptFolderPath -Filter $extension -File | Compress-Archive -DestinationPath $scriptZipPath -Force
-                displayName: "Package Scripts for $scriptFolder"         
+                displayName: "Package Scripts for $scriptFolder"          
           
           - publish: $(Build.ArtifactStagingDirectory)/package-$(target)
             artifact: package-$(target)
